# fantrax

./: .env.example  index.html  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  test-api.yml
api/: ai_bundle.py  debug.py  debug_auth.py  league_info.py  ping.py  rosters.py  standings.py  weekly_snapshot.py
src/fantrax_weekly/: collector.py  config.py  fantrax_api.py  fantrax_auth.py  translator.py
tests/: test_config.py  test_fantrax_api.py
