[project]
name = "fantrax-weekly"
version = "0.1.0"
description = "Weekly AI-powered fantasy baseball league commentary from Fantrax data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
